--- a/NOVA_AGENT_ENTRYPOINT.yaml
+++ b/NOVA_AGENT_ENTRYPOINT.yaml
@@ -1,4 +1,4 @@
-current_phase: 19
-current_checkpoint: 4
-checkpoint_title: DSL MVP — Deterministic Behavior Switching
+current_phase: 16
+current_checkpoint: 3
+checkpoint_title: CLI Fossil Cleanup & Artifact Lock Test
 allow_behavior_change: true
